Fix: ruby drawer close button unresponsive on mobile iOS

--- a/assets/side-drawer.css
+++ b/assets/side-drawer.css
@@ -74,8 +74,9 @@ side-drawer.side-drawer--from-right.is-closing .drawer__inner {
   animation-fill-mode: forwards;
 }
 
-#side-drawer-ruby-signature.side-drawer--from-right.is-open .drawer__inner {
-  animation-duration: 0.9s;
+body[data-animations="true"] #side-drawer-ruby-signature.side-drawer--from-right.is-open .drawer__inner {
+  animation: slideInRight 0.9s ease;
+  animation-fill-mode: forwards;
 }
 
 
